--- a/IPC2_Practica01_2025-2semestre/pom.xml
+++ b/IPC2_Practica01_2025-2semestre/pom.xml
@@ -11,6 +11,25 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.ipc2_practica01_2025.semestre.IPC2_Practica01_2025_2semestre</exec.mainClass>
     </properties>
+    
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <mainClass>com.mycompany.ipc2_practica01_2025.semestre.Menu_Inicial</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+    
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
