--- a/IPC2_Practica01_2025-2semestre/pom.xml
+++ b/IPC2_Practica01_2025-2semestre/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
@@ -9,49 +8,36 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <exec.mainClass>com.mycompany.ipc2_practica01_2025.semestre.IPC2_Practica01_2025_2semestre</exec.mainClass>
     </properties>
-    
     <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
+        <plugins>
+            <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-shade-plugin</artifactId>
+    <version>3.5.1</version>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>shade</goal>
+            </goals>
             <configuration>
-                <archive>
-                    <manifest>
-                        <addClasspath>true</addClasspath>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                         <mainClass>com.mycompany.ipc2_practica01_2025.semestre.Menu_Inicial</mainClass>
-                    </manifest>
-                </archive>
+                    </transformer>
+                </transformers>
             </configuration>
-        </plugin>
-    </plugins>
-</build>
-    
+        </execution>
+    </executions>
+</plugin>
+        </plugins>
+    </build>
     <dependencies>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-            
-            <!-- Dependencia para MySQL Connector/J -->
-        </dependency>
-        
- 
-        
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.29</version> 
+            <version>8.0.33</version>
         </dependency>
-        <dependency>
-    <groupId>org.apache.tomcat</groupId>
-    <artifactId>tomcat</artifactId>
-    <version>9.0.0.M1</version>
-    <type>pom</type>
-</dependency>
     </dependencies>
 </project>
